Faculty_Repo/DevOps-3rd-Lecture/K8S Advanced/manifests/config-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: config-secret-demo
spec:
  containers:
    - name: tester
      image: busybox
      command: ["sh","-c","echo Config APP_ENV=$APP_ENV; echo Secret user from secret: $DB_USER; cat /etc/config/WELCOME_MSG; sleep 3600"]
      volumeMounts:
        - name: cfg
          mountPath: /etc/config
        - name: sec
          mountPath: /etc/secret
          readOnly: true
  volumes:
    - name: cfg
      configMap:
        name: demo-config
    - name: sec
      secret:
        secretName: demo-secret
